--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Danh4160.github.io/my_portfolio",
   "name": "my_portfolio",
   "version": "0.1.0",
   "private": true,
@@ -6,10 +7,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "framer-motion": "^10.16.16",
+    "gh-pages": "^6.1.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
