--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Danh4160.github.io/my_portfolio",
+  "homepage": "https://danh4160.github.io/my_portfolio",
   "name": "my_portfolio",
   "version": "0.1.0",
   "private": false,
